styles.css
@font-face {
    font-family: 'merriweather';
    src: url('fonts/merriweather-bold.ttf') format('truetype');
}

@font-face {
    font-family: 'lato';
    src: url('fonts/lato-regular.ttf') format('truetype');
}

:root {
    --white: #FFFFFF;
    --tan: #F4F1EA;
    --brown: #382110;
    --black: #181818;
    --green: #409D69;
    --dark-green: #3B9160;
    --turquoise: #00635D;
    --light-gray: #F2F2F2;
    --med-gray: #999999;
}

* {
    box-sizing: border-box;
}

html, body{
    background-color: var(--white);
    color: var(--brown);
    margin: 0;
    height: 100%;
    text-wrap: pretty;
}

/*index page*/
.nav a {
    display: block;
    background-color: var(--tan);
    margin: 50px auto;
    width: 50vw;
    outline: var(--brown) solid 2px;
    border-radius: 20px;
    box-shadow: 0px 6px 6px rgb(0, 0, 0, 0.3);
    justify-content: center;
}

a h2 {
    font-family: 'merriweather';
    color: var(--brown);
    text-align: center;
    font-size: 36px;
    padding: 20px;
}

/*alpha*/
h1 {
    font-family: 'merriweather';
    font-size: 48px;
    color: var(--brown);
    text-align: center;
    padding: 20px;
}

.description {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.description > div {
    max-width: 800px;
    margin: 25px;
    padding: 50px;
    background-color: var(--tan);
    outline: var(--brown) solid 2px;
    border-radius: 20px;
    box-shadow: 0px 6px 6px rgb(0, 0, 0, 0.3);
}

h3 {
    font-family: 'merriweather';
    font-size: 24px;
    color: var(--brown);
    text-align: center;
    margin-top: 0;
}

p, ul{
    font-family: 'lato';
    font-size: 16px;
    line-height: 160%;
    color: var(--brown);
    margin-bottom: 0;
}

p {
    text-decoration: underline ;
}

ul {
    padding-left: 25px;
}

.loops-and-modes p{
    text-decoration: none;
}

.video {
    display: block;
    width: fit-content;
    max-width: 80vw;
    margin: 25px auto 50px;
    padding: 50px;
    background-color: var(--tan);
    outline: var(--brown) solid 2px;
    border-radius: 20px;
    box-shadow: 0px 6px 6px rgb(0, 0, 0, 0.3);
}

video {
    display: block;
    width: 100%;
    max-width: 800px;
    margin: auto;
    border-radius: 15px;
}

.space p{
    text-decoration: none;
    margin: 0;
}

/*alpha build*/
.alpha-button {
    display: flex;
    justify-content: center;
}

.alpha-button button{
    font-family: 'lato';
    font-size: 16px;
    color: var(--white);
    background-color: var(--green);
    border: none;
    border-radius: 5px;
    padding: 6px 10px;
    margin: 10px;
    cursor: pointer;
}

.alpha-button button:hover {
    background-color: var(--dark-green);
}

